Change to /api/v2 and fix /pins endpoint
